# olia-engine

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.bat  imgui.ini  todo.txt
assets/resources/: arce.blend  arce.blend1  arce.fbx
assets/shaders/: basic.glsl  canvas.glsl  depth.glsl  scene.glsl  screen.glsl  uielement.glsl
assets/shaders/frag/: fbo.frag
assets/shaders/glsl/: depth.glsl
include/SDL3/: SDL_revision.h
include/engine/: assetloader.hpp  camera.hpp  component.hpp  config.h  engine.hpp  entity.hpp  input.hpp  mesh.hpp  meshfilter.hpp  meshrenderer.hpp  model.hpp  platform.hpp  rendersystem.hpp  scene.hpp  shader.hpp  shader.inl  singleton.hpp  system.hpp  texture2D.hpp  transform.hpp  updatesystem.hpp
include/engine/buffers/: ebo.hpp  fbo.hpp  ifbo.hpp  quad.hpp  sbo.hpp  vao.hpp  vbo.hpp
include/engine/components/: camera.hpp  light.hpp  looker.hpp  mesh.hpp  meshfilter.hpp  meshrenderer.hpp  player.hpp  rigidbody.hpp  rotator.hpp  transform.hpp
include/engine/components/collision/: collision.hpp
include/engine/components/physics/: box.hpp  collider.hpp  collision.hpp  rigidbody.hpp  rigidbody3d.hpp  sphere.hpp
include/engine/components/physics/collider/: boxcollider3d.hpp  capsulecollider3d.hpp  collider.hpp  meshcollider3d.hpp  spherecollider3d.hpp
include/engine/components/ui/: canvas.hpp  element.hpp  image.hpp
include/engine/core/: engine.hpp
include/engine/ec/: component.hpp  entity.hpp
include/engine/ecs/: component.hpp  entity.hpp  physics.component.hpp  system.hpp
include/engine/ecs/sys/: physics.hpp  render.hpp  update.hpp
include/engine/graphics/: platform.hpp
include/engine/input/: input.hpp
include/engine/render/: platform.hpp
include/engine/systems/: physics.hpp  render.hpp  system.hpp  update.hpp
include/engine/utils/: component.hpp  config.h  entity.hpp
include/engine/window/: platform.hpp
include/glad/: glad.h
lib/SDL3/arm64/: SDL3.lib  SDL3_test.lib
lib/SDL3/x64/: SDL3.lib  SDL3_test.lib
lib/SDL3/x86/: SDL3.lib  SDL3_test.lib
src/: engine.cpp  main.cpp
src/core/: engine.cpp  entity.cpp  input.cpp  looker.cpp  meshrenderer.cpp  platform.cpp  rendersystem.cpp  scene.cpp  shader.cpp  transform.cpp  updatesystem.cpp
src/core/components/: meshrenderer.cpp  rotator.cpp
src/utils/: engine.cpp  glad.c
